--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Social links profile</title>
+    <link rel="stylesheet" href="./style.css" />
 
     <style>
       .attribution {
         font-size: 11px;
         text-align: center;
+        display: none;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
     <main>
@@ -31,11 +33,14 @@
             src="./assets/images/avatar-farid.jpg"
             alt="Muhammad Farid Yamin"
           />
-          <h1>Muhammad Farid Yamin</h1>
+          <h1>Muhammad Farid</h1>
           <p>Medan, Indonesia</p>
         </header>
 
-        <p>"Frontend Engineer"</p>
+        <p>
+          "Front-end Engineer & Mentor at Codify Academy. Building modern web
+          experiences."
+        </p>
 
         <nav>
           <ul>
