--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <style>
       .attribution {
+        margin-block-start: 1rem;
         font-size: 11px;
         text-align: center;
-        display: none;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -79,7 +79,12 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a
+          href="https://www.frontendmentor.io/profile/faridreaming"
+          target="_blank"
+          >Muhammad Farid Yamin</a
+        >.
       </div>
     </footer>
   </body>
